--- a/Platt/Info.plist
+++ b/Platt/Info.plist
@@ -23,6 +23,7 @@
 	<key>UIAppFonts</key>
 	<array>
 		<string>SF-Pro-Text-Bold.ttf</string>
+		<string>SF-Pro-Text-Regular.ttf</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
